diesel_compile_tests/tests/fail/array_expressions_must_be_correct_type.stderr
error[E0277]: cannot select `f64` from `NoFromClause`
   --> tests/fail/array_expressions_must_be_correct_type.rs:9:12
    |
  LL |     select(array((1f64, 3f64))).get_result::<Vec<i32>>(&mut connection);
    |     ------ ^^^^^^^^^^^^^^^^^^^ the trait `SelectableExpression<NoFromClause>` is not implemented for `f64`
    |     |
    |     required by a bound introduced by this call
    |
    = note: `f64` is no valid selection for `NoFromClause`
    = help: the following other types implement trait `SelectableExpression<QS>`:
              `&'a T` implements `SelectableExpression<QS>`
              `(T, T1)` implements `SelectableExpression<QS>`
              `(T, T1, T2)` implements `SelectableExpression<QS>`
              `(T, T1, T2, T3)` implements `SelectableExpression<QS>`
              `(T, T1, T2, T3, T4)` implements `SelectableExpression<QS>`
              `(T, T1, T2, T3, T4, T5)` implements `SelectableExpression<QS>`
              `(T, T1, T2, T3, T4, T5, T6)` implements `SelectableExpression<QS>`
              `(T, T1, T2, T3, T4, T5, T6, T7)` implements `SelectableExpression<QS>`
            and N others
    = note: required for `(f64, f64)` to implement `SelectableExpression<NoFromClause>`
    = note: 1 redundant requirement hidden
    = note: required for `diesel::pg::expression::array::ArrayLiteral<(f64, f64), diesel::sql_types::Integer>` to implement `SelectableExpression<NoFromClause>`
    = note: required for `SelectClause<ArrayLiteral<(f64, f64), Integer>>` to implement `diesel::query_builder::select_clause::SelectClauseExpression<NoFromClause>`
    = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<..., ...>>>` to implement `Query`
    = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<..., ...>>>` to implement `AsQuery`
note: required by a bound in `diesel::select`
   --> DIESEL/diesel/diesel/src/query_builder/functions.rs
    |
LL | pub fn select<T>(expression: T) -> crate::dsl::select<T>
    |        ------ required by a bound in this function
...
LL |     crate::dsl::select<T>: AsQuery,
    |                            ^^^^^^^ required by this bound in `select`
 
    
error[E0277]: the trait bound `f64: ValidGrouping<()>` is not satisfied
   --> tests/fail/array_expressions_must_be_correct_type.rs:9:12
    |
  LL |     select(array((1f64, 3f64))).get_result::<Vec<i32>>(&mut connection);
    |     ------ ^^^^^^^^^^^^^^^^^^^ the trait `ValidGrouping<()>` is not implemented for `f64`
    |     |
    |     required by a bound introduced by this call
    |
    = help: the following other types implement trait `ValidGrouping<GroupByClause>`:
              `&T` implements `ValidGrouping<GB>`
              `()` implements `ValidGrouping<GB>`
              `(T, T1)` implements `ValidGrouping<__GroupByClause>`
              `(T, T1, T2)` implements `ValidGrouping<__GroupByClause>`
              `(T, T1, T2, T3)` implements `ValidGrouping<__GroupByClause>`
              `(T, T1, T2, T3, T4)` implements `ValidGrouping<__GroupByClause>`
              `(T, T1, T2, T3, T4, T5)` implements `ValidGrouping<__GroupByClause>`
              `(T, T1, T2, T3, T4, T5, T6)` implements `ValidGrouping<__GroupByClause>`
            and N others
    = note: required for `(f64, f64)` to implement `ValidGrouping<()>`
    = note: 1 redundant requirement hidden
    = note: required for `diesel::pg::expression::array::ArrayLiteral<(f64, f64), diesel::sql_types::Integer>` to implement `ValidGrouping<()>`
    = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<..., ...>>>` to implement `Query`
    = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<..., ...>>>` to implement `AsQuery`
note: required by a bound in `diesel::select`
   --> DIESEL/diesel/diesel/src/query_builder/functions.rs
    |
LL | pub fn select<T>(expression: T) -> crate::dsl::select<T>
    |        ------ required by a bound in this function
...
LL |     crate::dsl::select<T>: AsQuery,
    |                            ^^^^^^^ required by this bound in `select`
 
    
error[E0277]: cannot select `f64` from `NoFromClause`
    --> tests/fail/array_expressions_must_be_correct_type.rs:9:56
     |
   LL |     select(array((1f64, 3f64))).get_result::<Vec<i32>>(&mut connection);
     |                                 ----------             ^^^^^^^^^^^^^^^ the trait `SelectableExpression<NoFromClause>` is not implemented for `f64`
     |                                 |
     |                                 required by a bound introduced by this call
     |
     = note: `f64` is no valid selection for `NoFromClause`
     = help: the following other types implement trait `SelectableExpression<QS>`:
               `&'a T` implements `SelectableExpression<QS>`
               `(T, T1)` implements `SelectableExpression<QS>`
               `(T, T1, T2)` implements `SelectableExpression<QS>`
               `(T, T1, T2, T3)` implements `SelectableExpression<QS>`
               `(T, T1, T2, T3, T4)` implements `SelectableExpression<QS>`
               `(T, T1, T2, T3, T4, T5)` implements `SelectableExpression<QS>`
               `(T, T1, T2, T3, T4, T5, T6)` implements `SelectableExpression<QS>`
               `(T, T1, T2, T3, T4, T5, T6, T7)` implements `SelectableExpression<QS>`
             and N others
     = note: required for `(f64, f64)` to implement `SelectableExpression<NoFromClause>`
     = note: 1 redundant requirement hidden
     = note: required for `diesel::pg::expression::array::ArrayLiteral<(f64, f64), diesel::sql_types::Integer>` to implement `SelectableExpression<NoFromClause>`
     = note: required for `SelectClause<ArrayLiteral<(f64, f64), Integer>>` to implement `diesel::query_builder::select_clause::SelectClauseExpression<NoFromClause>`
     = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<..., ...>>>` to implement `Query`
     = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<..., ...>>>` to implement `LoadQuery<'_, _, Vec<i32>>`
note: required by a bound in `get_result`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
     |        ---------- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
  
     
error[E0277]: the trait bound `f64: ValidGrouping<()>` is not satisfied
    --> tests/fail/array_expressions_must_be_correct_type.rs:9:56
     |
   LL |     select(array((1f64, 3f64))).get_result::<Vec<i32>>(&mut connection);
     |                                 ----------             ^^^^^^^^^^^^^^^ the trait `ValidGrouping<()>` is not implemented for `f64`
     |                                 |
     |                                 required by a bound introduced by this call
     |
     = help: the following other types implement trait `ValidGrouping<GroupByClause>`:
               `&T` implements `ValidGrouping<GB>`
               `()` implements `ValidGrouping<GB>`
               `(T, T1)` implements `ValidGrouping<__GroupByClause>`
               `(T, T1, T2)` implements `ValidGrouping<__GroupByClause>`
               `(T, T1, T2, T3)` implements `ValidGrouping<__GroupByClause>`
               `(T, T1, T2, T3, T4)` implements `ValidGrouping<__GroupByClause>`
               `(T, T1, T2, T3, T4, T5)` implements `ValidGrouping<__GroupByClause>`
               `(T, T1, T2, T3, T4, T5, T6)` implements `ValidGrouping<__GroupByClause>`
             and N others
     = note: required for `(f64, f64)` to implement `ValidGrouping<()>`
     = note: 1 redundant requirement hidden
     = note: required for `diesel::pg::expression::array::ArrayLiteral<(f64, f64), diesel::sql_types::Integer>` to implement `ValidGrouping<()>`
     = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<..., ...>>>` to implement `Query`
     = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<..., ...>>>` to implement `LoadQuery<'_, _, Vec<i32>>`
note: required by a bound in `get_result`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
     |        ---------- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
  
     
error[E0277]: the trait bound `f64: QueryId` is not satisfied
    --> tests/fail/array_expressions_must_be_correct_type.rs:9:56
     |
   LL |     select(array((1f64, 3f64))).get_result::<Vec<i32>>(&mut connection);
     |                                 ----------             ^^^^^^^^^^^^^^^ the trait `QueryId` is not implemented for `f64`
     |                                 |
     |                                 required by a bound introduced by this call
     |
     = help: the following other types implement trait `QueryId`:
               &T
               ()
               (T, T1)
               (T, T1, T2)
               (T, T1, T2, T3)
               (T, T1, T2, T3, T4)
               (T, T1, T2, T3, T4, T5)
               (T, T1, T2, T3, T4, T5, T6)
             and N others
     = note: required for `(f64, f64)` to implement `QueryId`
     = note: 3 redundant requirements hidden
     = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<..., ...>>>` to implement `QueryId`
     = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<..., ...>>>` to implement `LoadQuery<'_, _, Vec<i32>>`
note: required by a bound in `get_result`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
     |        ---------- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
  
     
error[E0277]: `f64` is no valid SQL fragment for the `Pg` backend
    --> tests/fail/array_expressions_must_be_correct_type.rs:9:56
     |
   LL |     select(array((1f64, 3f64))).get_result::<Vec<i32>>(&mut connection);
     |                                 ----------             ^^^^^^^^^^^^^^^ the trait `QueryFragment<Pg>` is not implemented for `f64`
     |                                 |
     |                                 required by a bound introduced by this call
     |
     = note: this usually means that the `Pg` database system does not support 
             this SQL syntax
     = help: the following other types implement trait `QueryFragment<DB, SP>`:
               `&T` implements `QueryFragment<DB>`
               `()` implements `QueryFragment<DB>`
               `(T, T1)` implements `QueryFragment<__DB>`
               `(T, T1, T2)` implements `QueryFragment<__DB>`
               `(T, T1, T2, T3)` implements `QueryFragment<__DB>`
               `(T, T1, T2, T3, T4)` implements `QueryFragment<__DB>`
               `(T, T1, T2, T3, T4, T5)` implements `QueryFragment<__DB>`
               `(T, T1, T2, T3, T4, T5, T6)` implements `QueryFragment<__DB>`
             and N others
     = note: required for `(f64, f64)` to implement `QueryFragment<Pg>`
     = note: 4 redundant requirements hidden
     = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<..., ...>>>` to implement `QueryFragment<Pg>`
     = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<..., ...>>>` to implement `LoadQuery<'_, _, Vec<i32>>`
note: required by a bound in `get_result`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
     |        ---------- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
  
     
error[E0277]: the trait bound `f64: diesel::Expression` is not satisfied
  --> tests/fail/array_expressions_must_be_correct_type.rs:9:19
   |
 LL |     select(array((1f64, 3f64))).get_result::<Vec<i32>>(&mut connection);
   |            -----  ^^^^ the trait `diesel::Expression` is not implemented for `f64`
   |            |
   |            required by a bound introduced by this call
   |
   = help: the following other types implement trait `diesel::Expression`:
             &T
             AliasedField<S, C>
             Box<T>
             CaseWhen<CaseWhenConditionsIntermediateNode<W, T, Whens>, E>
             CaseWhen<CaseWhenConditionsLeaf<W, T>, ElseExpression<E>>
             CaseWhen<CaseWhenConditionsLeaf<W, T>, NoElseExpression>
             CountStar
             Exists<T>
           and N others
   = note: required for `f64` to implement `AsExpression<diesel::sql_types::Integer>`
   = note: required for `(f64, f64)` to implement `IntoArrayExpression<diesel::sql_types::Integer>`
note: required by a bound in `diesel::dsl::array`
  --> DIESEL/diesel/diesel/src/pg/expression/array.rs
   |
LL | pub fn array<ST, T>(elements: T) -> dsl::array<ST, T>
   |        ----- required by a bound in this function
LL | where
LL |     T: IntoArrayExpression<ST>,
   |        ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `array`

   
error[E0277]: cannot convert `(f64, f64)` into an expression of type `Array<diesel::sql_types::Integer>`
 --> tests/fail/array_expressions_must_be_correct_type.rs:9:12
  |
LL |     select(array((1f64, 3f64))).get_result::<Vec<i32>>(&mut connection);
  |            ^^^^^^^^^^^^^^^^^^^ the trait `IntoArrayExpression<diesel::sql_types::Integer>` is not implemented for `(f64, f64)`
  |
  = note: `the trait bound `(f64, f64): IntoArrayExpression<diesel::sql_types::Integer>` is not satisfied. (`AsExpressionList` is a deprecated trait alias for `IntoArrayExpression`)
  = help: the following other types implement trait `IntoArrayExpression<ST>`:
            (T, T1)
            (T, T1, T2)
            (T, T1, T2, T3)
            (T, T1, T2, T3, T4)
            (T, T1, T2, T3, T4, T5)
            (T, T1, T2, T3, T4, T5, T6)
            (T, T1, T2, T3, T4, T5, T6, T7)
            (T, T1, T2, T3, T4, T5, T6, T7, T8)
          and N others
For more information about this error, try `rustc --explain E0277`.
